--- a/bro_grondwater_plugin/requirements.txt
+++ b/bro_grondwater_plugin/requirements.txt
@@ -5,8 +5,6 @@
 pandas>=1.3.0
 openpyxl>=3.0.0
 matplotlib>=3.3.0
-
-# Hydropandas - DEV branch with brodata engine
-git+https://github.com/ArtesiaWater/hydropandas.git@dev
+hydropandas
 
 # Note: QGIS packages (PyQt5, qgis) are provided by QGIS installation
